--- a/app/views/birthdays/show.html.haml
+++ b/app/views/birthdays/show.html.haml
@@ -1,15 +1,6 @@
 %div
   %h2
     #{birthday} #{birthday.state}
-  %div
-    %h3
-      Budget
-    %p
-      - birthday.pledges.each do |pledge|
-        %span
-          #{pledge.amount} by #{pledge.user}
-      %hr
-      %h4
-        Total: #{birthday.budget}
-%div
+  = render "budget"
+  = render "gift_ideas"
   = render "pledge"
