--- a/app/views/birthdays/_pledge.html.haml
+++ b/app/views/birthdays/_pledge.html.haml
@@ -3,8 +3,8 @@
     Your pledge is #{pledge.amount}
     = simple_form_for pledge, url: birthday_pledge_path(birthday, pledge) do |f|
       = f.input :amount
-      = f.submit
+      = f.submit class: 'pure-button'
   - else
     = simple_form_for Pledge.new, url: birthday_pledges_path(birthday) do |f|
       = f.input :amount
-      = f.submit
+      = f.submit class: 'pure-button'
