--- a/app/views/birthdays/_budget.html.haml
+++ b/app/views/birthdays/_budget.html.haml
@@ -1,10 +1,30 @@
 %div
   %h3
     Budget
-  %p
-    - birthday.pledges.each do |pledge|
-      %span
-        #{pledge.amount} by #{pledge.user}
-    %hr
-    %h4
-      Total: #{birthday.budget}
+  %table.table-minimal
+    %thead
+      %tr
+        %th User
+        %th Amount
+        %th
+    %tbody
+      - birthday.pledges.each do |pledge|
+        %tr
+          - if pledge == current_user.pledge_for_birthday(birthday)
+            = simple_form_for pledge, url: birthday_pledge_path(birthday, pledge) do |f|
+              %td
+                = current_user
+              %td
+                = f.text_field :amount
+              %td
+                = f.submit class: 'pure-button'
+          - else
+            %td #{pledge.user}
+            %td #{pledge.amount}
+            %td
+      %tr
+        %td Total:
+        %td #{birthday.budget}
+        %td
+
+
